--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node src/index.ts",
+    "start": "pm2 start dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "dependencies": {
@@ -14,8 +14,10 @@
     "bull": "^4.10.4",
     "cluster": "^0.7.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "fast-xml-parser": "^4.2.7",
+    "pm2": "^5.4.2",
     "puppeteer": "^23.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
