--- a/package.json
+++ b/package.json
@@ -5,28 +5,28 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
+    "prod": "node dist/index.js",
     "start": "pm2 start dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "dependencies": {
+    "adm-zip": "^0.5.16",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
-    "bull": "^4.10.4",
     "cluster": "^0.7.7",
-    "compression": "^1.7.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "fast-xml-parser": "^4.2.7",
     "pm2": "^5.4.2",
     "puppeteer": "^23.6.0",
+    "puppeteer-cluster": "^0.24.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.6",
-    "@types/compression": "^1.7.5",
+    "@types/adm-zip": "^0.5.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.0",
