--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@types/node": "^20.5.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "nodemon": "^3.0.1",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "uglify-js": "^3.19.3",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   }
 }
