--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "forceConsistentCasingInFileNames": true, /* Ensure that casing is correct in imports. */
     "strict": true, /* Enable all strict type-checking options. */
     "resolveJsonModule": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "paths": {
       "@/*": [
         "./src/*"
