--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc ",
     "prod": "node dist/index.js",
     "start": "pm2 start ecosystem.config.js",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "dependencies": {
+    "@node-minify/core": "^9.0.2",
+    "@node-minify/html-minifier": "^9.0.1",
     "adm-zip": "^0.5.16",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
@@ -18,14 +20,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "pm2": "^5.4.2",
-    "puppeteer": "^23.6.0",
-    "puppeteer-cluster": "^0.24.0",
+    "puppeteer": "^23.11.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.6",
+    "@node-minify/types": "^9.0.0",
     "@types/adm-zip": "^0.5.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
