--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,15 +5,13 @@ services:
     user: root
     build:
       context: ./
-      target: prod
+      target: dev
     container_name: convert-pdf
     ports:
       - 3002:3002
     volumes:
       - ./src:/app/src
       - ./public:/app/public
-    extra_hosts:
-      - "host.docker.condev:172.17.5.8"
     environment:
       - TZ=Asia/Bangkok
 
