--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "dependencies": {
-    "@node-minify/core": "^9.0.2",
-    "@node-minify/html-minifier": "^9.0.1",
     "adm-zip": "^0.5.16",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cluster": "^0.7.7",
+    "compress-pdf": "^0.5.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "pm2": "^5.4.2",
-    "puppeteer": "^23.11.0",
+    "puppeteer": "^24.6.1",
+    "puppeteer-core": "^24.6.1",
+    "sharp": "^0.34.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
