--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc ",
-    "prod": "node dist/index.js",
-    "start": "pm2 start ecosystem.config.js",
+    "start": "node dist/index.js",
+    "pm2:start": "pm2 start ecosystem.config.js",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "dependencies": {
