--- a/package.json
+++ b/package.json
@@ -6,24 +6,17 @@
   "scripts": {
     "build": "tsc ",
     "start": "node dist/index.js",
-    "pm2:start": "pm2 start ecosystem.config.js",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "dependencies": {
+    "@minify-html/node": "^0.16.4",
     "adm-zip": "^0.5.16",
-    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
-    "cluster": "^0.7.7",
-    "compress-pdf": "^0.5.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "pm2": "^5.4.2",
     "puppeteer": "^24.6.1",
-    "puppeteer-core": "^24.6.1",
-    "sharp": "^0.34.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "sharp": "^0.34.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
@@ -35,7 +28,9 @@
     "@types/node": "^20.5.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.6",
     "uglify-js": "^3.19.3",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
